Use Java 11 as minimum for build.